--- a/HW5 Camera/HW5 Camera/HW5 Camera.vcxproj
+++ b/HW5 Camera/HW5 Camera/HW5 Camera.vcxproj
@@ -121,14 +121,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <None Include="..\..\HW4 Transformation\HW4 Transformation\HW4 Transformation.vcxproj" />
-    <None Include="..\..\HW4 Transformation\HW4 Transformation\HW4 Transformation.vcxproj.filters" />
-    <None Include="..\..\HW4 Transformation\HW4 Transformation\HW4 Transformation.vcxproj.user" />
-    <None Include="..\..\HW4 Transformation\HW4 Transformation\imgui.ini" />
-    <None Include="imgui.ini" />
-  </ItemGroup>
-  <ItemGroup>
     <ClInclude Include="Bresenham.h" />
+    <ClInclude Include="Camera.h" />
     <ClInclude Include="imconfig.h" />
     <ClInclude Include="imgui.h" />
     <ClInclude Include="imgui_impl_glfw.h" />
